Closed Bug 110290 Opened 23 years ago Closed 23 years ago

History folders empty

Categories

(Core Graveyard :: History: Global, defect)

defect
Not set
blocker

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: tracy, Assigned: alecf)

References

Details

(Keywords: smoketest, Whiteboard: [PDT+][verified on trunk; waiting for 6.2 branch])

Attachments

(1 file)

seen on commercial builds: windows 2001-11-15-05-trunk linux 2001-11-15-06-trunk mac 2001-11-15-04-trunk - Browse a few pages - Go to Tasks | Tools | History - Click on the folder marked Today Expected Results: The folder should contain the history of today's browsing tested results: the folder is empty
Keywords: smoketest
I find that this problem occurs History Sidebar on mac 2001-11-15-08-trunk. When I quit mozilla and open history.dat(by text-editor), history.dat is not empty.
This cause the URI bar to always propose the 'Search Google for "your URI"' sentence instead of completing the URI from the History. It didn't occur on build 2001111403 (but occurs on build 2001111503).
-->alecf; he'll investigate
Assignee: blakeross → alecf
I'm not sure why this worked for me yesterday - maybe cells are being lazily created? Anyway, this should cover all cases.
and it's in!
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Works fine in the mac respin builds. I'll leave it to claudius to Verify it on all platforms and mark this bug verified :)
VERIFIED Fixed with 200111514 MacOS 8.x build VERIFIED Fixed with 200111513 RHLinux build still waiting on a Win build with the fix
*** Bug 110513 has been marked as a duplicate of this bug. ***
verified on commercial builds: windows 2001-11-16-05-trunk linux 2001-11-16-06-trunk mac 2001-11-16-04-trunk mac osx 2001-11-16-16-08-trunk
Status: RESOLVED → VERIFIED
who can sr and r= this one. i realize it is already in the trunk, but we'd like a review before landing it on the 6.2.1, and 094 branch.
Whiteboard: [PDT]
adding rpotts and radha to see if they can help with the s/sr.
waterson - can you pls sr= this bad boy. we'd like to take this on the 6.2 branch as soon as we have your blessing.
sr=waterson
After taking a second look at the patch, I see that it is quite harmless. The patch has fixed the problem in the trunk too. r=radha
Whiteboard: [PDT] → [PDT][verified on trunk; waiting for 6.2 branch]
Keywords: edt0.9.4
Radha - Could you pls check this one into the 6.2 branch, too?
PDT+, we need to get this one on the 6.2 branch.
Whiteboard: [PDT][verified on trunk; waiting for 6.2 branch] → [PDT+][verified on trunk; waiting for 6.2 branch]
Whoa! Why would this need to go into the 6.2 branch? Why would we think it exists in the 6.2 branch? This bug was introduced as a regression on the trunk on or around 2001-11-15. It is a smoketest blocker. There is no chance on Earth this bug would exist in the branch as that would either indicate we shipped 6.2 with it or someone checked in to that branch and trunk causing the regression. I can verify that neither was the case. Just to be sure I looked at a 2001-11-19-22 6.2 branch build and it of course does not exist. Am I totally off base? Am I missing something?
If I understand this right, Bug 102043 introduced this issue into the trunk, and alecf belives checking resolving this bug on the branch will enable the patch for Bug 102043 to funtion proberly.
Oh heheh, this is THAT bug, my bad. I read the other before but never matched the numbers up in my head. Ok, sorry to raise alarm, it just didn't seem right to be checking extra stuff in to such a tightly controlled branch release.
Comment on attachment 57932 [details] [diff] [review] also acknowledge empty cells as non-existant sr=rpotts@netscape.com works for me :-)
Attachment #57932 - Flags: superreview+
rpotts/alecf/anybody, do we need any additional work for this on the 0.9.4 branch for embeding customers?
EDT - removing edt keyword.
Keywords: edt0.9.4
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: