fix for bug 110290 - empty cells are considered non-existent when trying to see if a history cell is hidden or not. r/a=brade